# openclaw-feishu-delivery

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml
docs/: agent-onboarding.md  migrate-from-legacy-openclaw.md  openclaw-runtime-workflow.md  release-notes-2026-03-18.md  template-contract.md
examples/: accounts.example.json  cron-delivery.example.json  feishu-templates.example.json  jobs.example.json
examples/payloads/: ai-hotspot.example.json  daily-diary.example.json
scripts/: process_retry_queue.py  review_pr.py  scaffold_agent_task.py  send_message.py  sync_workspace_memory_rules.py  upsert_ai_hotspot_bitable.py
skills/feishu-template-guide/: SKILL.md
skills/feishu-template-guide/references/: block-types.md  scaffold-cli.md
src/openclaw_feishu_cron_kit/: __init__.py  ai_hotspot_bitable.py  core.py  cron_wrapper.py  memory_rules.py  presentation_presets.py  renderer.py  storage.py  template_normalizers.py
tests/: test_ai_hotspot_bitable.py  test_cron_wrapper.py  test_entrypoints.py  test_memory_rules.py  test_renderer.py  test_runtime_and_jobs_sync.py
